                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Stenberg (8 Jun 2009)
- Triggered by bug report #2798852 and the patch in there, I fixed configure
  to detect gnutls build options with pkg-config only and not libgnutls-config
  anymore since GnuTLS has stopped distributing that tool. If an explicit path
  is given to configure, we will instead guess on how to link and use that
  lib. I did not use the patch from the bug report.

Yang Tse (8 Jun 2009)
- Igor Novoseltsev adjusted Makefile.vxworks to get sources and headers
  included from Makefile.inc, and provided docs\INSTALL VxWorks section.

  I removed buildconf.bat from release and daily snapshot archives. This
  file is only for CVS tree checkout builds.

Daniel Stenberg (8 Jun 2009)
- Eric Wong fixed --no-buffer to actually switch off output buffering. Been
  broken since 7.19.0

Bill Hoffman (6 Jun 2009)
- Added some cmake docs and fixed socklen_t in the build.

Yang Tse (5 Jun 2009)
- John E. Malmberg provided VMS specific patch: "This fixes an existing bug
  in urlglob.c where it was not converting the Curl Unix exit code to a VMS
  DCL compatible exit code.  This fix required the enhancement described next.
  This also adds an enhancement to main.c so that when curl is run under a
  Unix shell like Bash on VMS, it will return the standard Unix exit codes
  and messages." And another patch for docs/examples.

  I introduced os-specific.c and os-specific.h for use in curl tool code
  and adjusted John E. Malmberg's patch placement to use these new files
  as an effort to prevent main.c from growing ad infinitum. Code already
  existing in main.c which is OS specific should be moved into these files.

Daniel Stenberg (4 June 2009)